WebCore/platform/win/ContextMenuWin.cpp
@@ -90,7 +90,8 @@ static ContextMenuItem* contextMenuItemByIdOrPosition(HMENU menu, unsigned id, B
 
     info->cbSize = sizeof(MENUITEMINFO);
     
-    info->fMask = MIIM_FTYPE | MIIM_ID | MIIM_STRING;
+    // Setting MIIM_DATA which is useful for WebKit clients who store data in this member for their custom menu items.
+    info->fMask = MIIM_FTYPE | MIIM_ID | MIIM_STRING | MIIM_DATA;
 
     if (!::GetMenuItemInfo(menu, id, byPosition, info)) {
         free(info);
